# col-nomina-co

./: README.md  pyproject.toml
src/nomina_co/: __init__.py  aportes.py  liquidacion.py  modelos.py  retencion.py  xml_dian.py
tests/: test_liquidacion.py
